--- a/task 2/index.html
+++ b/task 2/index.html
@@ -10,12 +10,14 @@
     <h1>
         Task List 
     </h1>
-    <div class = 'add'>
+    <div class="container">
+    <div class = 'add' id = 'mainadd'>
         <input type="text" placeholder="task" name = 'task'> <button id ='add'>add </button>
     </div>
     <div  id="tasks">
 
-    </div>
+    </div> 
+</div>
 
     
     <script src="script.js"></script>
